--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
             <nav class="nav-main">
                 <div class="btn-toggle-nav" onclick="toggleNav()"></div>
                 <div class="nimi">Mihkel Järviste</div>
-                <div class="tabel">
-                        <input class="menu-btn" type="checkbox" id="menu-btn" />
-                        <label class="menu-icon" for="menu-btn"><span class="navicon">Andmed</span></label>
-                        <label class="menu-icon" for="menu-btn"><span class="navicon">Statistika</span></label>
-                        <ul class="menu">
-                          <li><a href="#work">Our Work</a></li>
-                          <li><a href="#about">About</a></li>
-                          <li><a href="#careers">Careers</a></li>
-                          <li><a href="#contact">Contact</a></li>
-                        </ul>
-                </div>
                 <div class="logod">
                     <div class="pildid">
                         <a href="https://instagram.com/">
@@ -56,7 +45,78 @@
             </aside>
         </header>
         <main>
-            
+            <section>
+                <div class="pilt">
+                    <img src="järv.jpg" width=300>
+                    <div class="andmed">
+                        <div>Vanus: 19</div>
+                        <div>Klubi: Jalgpallikool Tammeka</div>
+                        <div>Positsioob väljakul:</div>
+                        <ul>
+                            <li>*CM</li>
+                            <li>*AM</li>
+                            <li>*DM</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+                <div class="tabeliveerud">
+                    <div id="tabeliesimeneveerg">
+                        <table class="tabelid">
+                            <tr>
+                                <th>MÄNGUMINUTID</th>
+                            </tr>
+                            <tr>
+                                <td>5112 (Premium Liiga+Eesti Karikas)</td>
+                            </tr>
+                        </table>    
+                        <table class="tabelid">
+                            <tr>
+                                <th>MÄNGUD</th>
+                            </tr>
+                            <tr>
+                                <td>83</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div id="tabeliteineveerg">
+                        <table class="tabelid">
+                            <tr>
+                                <th>VÄRAVASÖÖDUD</th>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                            </tr>
+                        </table>
+                        <table class="tabelid">
+                            <tr>
+                                <th>VÄRAVAD</th>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div id="tabelikolmasveerg">
+                        <table class="tabelid">
+                            <tr>
+                                <th>MÄNGUD NOORTEKOONDISTE EEST</th>
+                            </tr>
+                            <tr>
+                                <td>28</td>
+                            </tr>
+                        </table>
+                        <table class="tabelid">
+                            <tr>
+                                <th>KOLLASED KAARDID</th>
+                            </tr>
+                            <tr>
+                                <td>10</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
         </footer>
